--- a/projeto web 02/index.html
+++ b/projeto web 02/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto web</title>
 </head>
+
 <body>
-    
+    <h1>ECONOMIA VERDE</h1>
+    <div>
+        <div>
+            <h2>O QUE E</h2>
+        </div>
+    </div>
+    <p>O modelo de economia que vivenciamos em nosso dia a dia faz com que tenhamos que enfrentar vários desafios, como
+        a desigualdade, o desperdício, escassez de recursos naturais, fora as diversas ameaças ao meio ambiente e à
+        saúde humana. Ou seja, ele gera consequências que colocam em xeque a continuidade das gerações futuras.</p>
+    <div>
+        <div>
+            <img src="images/imagrm 1.webp" alt="economia verde">
+        </div>
+    </div>
+    <P>O modelo de economia que vivenciamos em nosso dia a dia faz com que tenhamos que enfrentar vários desafios, como
+        a desigualdade, o desperdício, escassez de recursos naturais, fora as diversas ameaças ao meio ambiente e à
+        saúde humana. Ou seja, ele gera consequências que colocam em xeque a continuidade das gerações futuras.</P>
+    <div>
+        <div>
+            <h2>Seu surgimento</h2>
+        </div>
+    </div>
+    <p>A economia verde surgiu no Programa das Nações Unidas para o Meio Ambiente (Pnuma), em 2008, com a finalidade de
+        tornar a economia mais sustentável, ou seja, com uma economia que resultasse na melhoria do bem-estar da
+        humanidade, igualdade social e com menor número de riscos ao meio ambiente.</p>
+
+
 </body>
+
 </html>
