--- a/projeto web 02/index.html
+++ b/projeto web 02/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto web</title>
 </head>
-
+<link rel="stylesheet" href="css/style.css">
 <body>
     <h1>ECONOMIA VERDE</h1>
     <div>
@@ -34,6 +34,33 @@
     <p>A economia verde surgiu no Programa das Nações Unidas para o Meio Ambiente (Pnuma), em 2008, com a finalidade de
         tornar a economia mais sustentável, ou seja, com uma economia que resultasse na melhoria do bem-estar da
         humanidade, igualdade social e com menor número de riscos ao meio ambiente.</p>
+    <div>
+        <div>
+        </div>
+    </div>
+    <br>
+    <div>
+        <div>
+        </div>
+    </div>
+    <p>A economia verde, inclusive, é considerada um dos principais caminhos para atingir os objetivos do
+        desenvolvimento sustentável. Em sua fórmula, diversos fatores são elencados, como oferta de empregos, reciclagem
+        de materiais, inclusão social, consumo responsável, uso de energia limpa e valorização da biodiversidade.</p>
+
+    <h2>sua importancia</h2>
+    <div>
+        <div>
+        </div>
+    </div>
+    <P>O principal objetivo da Economia Verde é levar ao desenvolvimento econômico buscando também a igualdade social,
+        procurando a erradicação da pobreza e melhoria do bem-estar dos seres humanos, diminuindo os impactos ambientais
+        e a escassez ecológica.</P>
+        <div>
+            <div>
+                <img src="images/imagem 2" alt="imagem de pobreza e meio ambiente devastado">
+            </div>
+        </div>
+
 
 
 </body>
